// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`symbol-references — list row rendering > given a cm command error > renders empty list when cm fails 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Callers (0/0)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;255;98;140m Error: cm cm failed: Symbol not found[0m    [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit[0m                                                                                      [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given a long results list > renders scrollable rows with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m References (20/20)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/files/component.ts[0m                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 createFilesComponent [38;2;76;62;118magent/extensions/i[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m {[39m[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createSymbolsComponent [38;2;76;62;118magent/extensions[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ExtensionAPI,[39m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createBookmarksComponent [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ExtensionContext,[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createTodosComponent [38;2;76;62;118magent/extensions/i[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  KeybindingsManager,[39m[0m                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createListPicker [38;2;76;62;118magent/extensions/ide/l[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m} [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 formatSymbolListEntry [38;2;76;62;118magent/extensions/[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 querySymbols [38;2;76;62;118magent/extensions/ide/compo[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-tui"[39m[38;2;225;228;232m;[39m[0m                   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 loadFilePreviewWithShiki [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { Key } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-tui"[39m[38;2;225;228;232m;[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createFilePreviewLoader [38;2;76;62;118magent/extension[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m {[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 openEditor [38;2;76;62;118magent/extensions/ide/lib/edi[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  createListPicker,[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 getFileIcon [38;2;76;62;118magent/extensions/ide/lib/fi[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m ListPickerComponent,[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 highlightCodeLines [38;2;76;62;118magent/extensions/ide[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m} [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker"[39m[38;2;225;228;232m;[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createSplitPanel [38;2;76;62;118magent/extensions/ide/l[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { SymbolReferenceActionType } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../symbol-references/typ[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 renderBorder [38;2;76;62;118magent/extensions/ide/lib/s[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 calculateGraphLayout [38;2;76;62;118magent/extensions/i[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { openEditor } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/editor-utils"[39m[38;2;225;228;232m;[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 buildGraphInput [38;2;76;62;118magent/extensions/ide/co[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { FileInfo, FileResult } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./types"[39m[38;2;225;228;232m;[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createMockPi [38;2;76;62;118magent/extensions/ide/lib/t[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getMtimeSorter } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./helpers"[39m[38;2;225;228;232m;[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createMockTui [38;2;76;62;118magent/extensions/ide/lib/[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { loadFilePreviewWithShiki } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-preview"[39m[38;2;225;228;232m;[39m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createMockTheme [38;2;76;62;118magent/extensions/ide/li[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { join } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"node:path"[39m[38;2;225;228;232m;[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 matchesKey [38;2;76;62;118mnode_modules/@mariozechner/p[39m[38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mconst[39m[38;2;225;228;232m [39m[38;2;121;184;255mBINARY_EXTENSIONS[39m[38;2;225;228;232m [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;249;117;131mnew[39m[38;2;225;228;232m [39m[38;2;179;146;240mSet[39m[38;2;225;228;232m([[39m[0m                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;106;115;125m// images[39m[0m                                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"png"[39m[38;2;225;228;232m,[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"jpg"[39m[38;2;225;228;232m,[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"jpeg"[39m[38;2;225;228;232m,[39m[0m                                                                [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m          [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given callees results > renders callee symbols with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Callees (3/3)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/symbols/helpers.ts[0m                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 querySymbols [38;2;76;62;118magent/extensions/ide/compo[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { ExtensionAPI } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[39m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 formatSymbolListEntry [38;2;76;62;118magent/extensions/[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { SymbolInfo, SymbolTypeFilter } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./types"[39m[38;2;225;228;232m;[39m[0m             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 loadFilePreviewWithShiki [38;2;76;62;118magent/extensio[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mbuildQueryArgs[39m[38;2;225;228;232m([39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mquery[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m,[39m[0m                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mtypeFilter[39m[38;2;249;117;131m?:[39m[38;2;225;228;232m [39m[38;2;179;146;240mSymbolTypeFilter[39m[38;2;225;228;232m,[39m[0m                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m[] {[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m [39m[38;2;121;184;255margs[39m[38;2;225;228;232m [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [[39m[38;2;158;203;255m"query"[39m[38;2;225;228;232m, query, [39m[38;2;158;203;255m"--format"[39m[38;2;225;228;232m, [39m[38;2;158;203;255m"ai"[39m[38;2;225;228;232m];[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mif[39m[38;2;225;228;232m (typeFilter [39m[38;2;249;117;131m&&[39m[38;2;225;228;232m typeFilter [39m[38;2;249;117;131m!==[39m[38;2;225;228;232m [39m[38;2;158;203;255m"all"[39m[38;2;225;228;232m) args.[39m[38;2;179;146;240mpush[39m[38;2;225;228;232m([39m[38;2;158;203;255m"--type"[39m[38;2;225;228;232m, typeFilter[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m args;[39m[0m                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240msafeParseInt[39m[38;2;225;228;232m([39m[38;2;255;171;112mvalue[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m [39m[38;2;249;117;131m|[39m[38;2;225;228;232m [39m[38;2;121;184;255mundefined[39m[38;2;225;228;232m, [39m[38;2;255;171;112mfallback[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mnumber[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mnumb[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m [39m[38;2;121;184;255mparsed[39m[38;2;225;228;232m [39m[38;2;249;117;131m=[39m[38;2;225;228;232m Number.[39m[38;2;179;146;240mparseInt[39m[38;2;225;228;232m(value [39m[38;2;249;117;131m??[39m[38;2;225;228;232m [39m[38;2;158;203;255m""[39m[38;2;225;228;232m, [39m[38;2;121;184;255m10[39m[38;2;225;228;232m);[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m Number.[39m[38;2;179;146;240misNaN[39m[38;2;225;228;232m(parsed) [39m[38;2;249;117;131m?[39m[38;2;225;228;232m fallback [39m[38;2;249;117;131m:[39m[38;2;225;228;232m parsed;[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mfunction[39m[38;2;225;228;232m [39m[38;2;179;146;240mparseSymbolLine[39m[38;2;225;228;232m([39m[38;2;255;171;112mline[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m)[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;179;146;240mSymbolInfo[39m[38;2;225;228;232m [39m[38;2;249;117;131m|[39m[38;2;225;228;232m [39m[38;2;121;184;255mnull[39m[38;2;225;228;232m {[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m [39m[38;2;121;184;255mmatch[39m[38;2;225;228;232m [39m[38;2;249;117;131m=[39m[38;2;219;237;255m [39m[38;2;158;203;255m/[39m[38;2;249;117;131m^[39m[38;2;219;237;255m([39m[38;2;121;184;255m.[39m[38;2;249;117;131m+[39m[38;2;219;237;255m)[39m[1m[38;2;133;232;157m\\|[39m[22m[38;2;219;237;255m([39m[38;2;121;184;255m[a-z_][39m[38;2;249;117;131m+[39m[38;2;219;237;255m)[39m[1m[38;2;133;232;157m\\|[39m[22m[38;2;219;237;255m([39m[1m[38;2;133;232;157m\\.[39m[22m[38;2;121;184;255m[[39m[38;2;249;117;131m^[39m[38;2;121;184;255m|][39m[38;2;249;117;131m+[39m[38;2;219;237;255m)[39m[1m[38;2;133;232;157m\\|[39m[22m[38;2;219;237;255m([39m[38;2;121;184;255m\\d[39m[38;2;249;117;131m+[39m[38;2;219;237;255m-[39m[38;2;121;184;255m\\d[39m[38;2;249;117;131m+[39m[38;2;219;237;255m)[39m[38;2;158;203;255m/[39m[38;2;225;228;232m.[39m[38;2;179;146;240mexec[39m[38;2;225;228;232m(line);[39m[0m     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mif[39m[38;2;225;228;232m ([39m[38;2;249;117;131m![39m[38;2;225;228;232mmatch) [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m [39m[38;2;121;184;255mnull[39m[38;2;225;228;232m;[39m[0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m [, [39m[38;2;121;184;255mname[39m[38;2;225;228;232m, [39m[38;2;121;184;255mtype[39m[38;2;225;228;232m, [39m[38;2;121;184;255mpath[39m[38;2;225;228;232m, [39m[38;2;121;184;255mlineRange[39m[38;2;225;228;232m] [39m[38;2;249;117;131m=[39m[38;2;225;228;232m match;[39m[0m                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m [[39m[38;2;121;184;255mstartStr[39m[38;2;225;228;232m, [39m[38;2;121;184;255mendStr[39m[38;2;225;228;232m] [39m[38;2;249;117;131m=[39m[38;2;225;228;232m lineRange.[39m[38;2;179;146;240msplit[39m[38;2;225;228;232m([39m[38;2;158;203;255m"-"[39m[38;2;225;228;232m);[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m [39m[38;2;121;184;255mstartLine[39m[38;2;225;228;232m [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;179;146;240msafeParseInt[39m[38;2;225;228;232m(startStr, [39m[38;2;121;184;255m1[39m[38;2;225;228;232m);[39m[0m                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mconst[39m[38;2;225;228;232m [39m[38;2;121;184;255mendLine[39m[38;2;225;228;232m [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;179;146;240msafeParseInt[39m[38;2;225;228;232m(endStr, startLine);[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mreturn[39m[38;2;225;228;232m {[39m[0m                                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    id: [39m[38;2;158;203;255m\`\${[39m[38;2;225;228;232mpath[39m[38;2;158;203;255m}:\${[39m[38;2;179;146;240mString[39m[38;2;158;203;255m([39m[38;2;225;228;232mstartLine[39m[38;2;158;203;255m)[39m[38;2;158;203;255m}\`[39m[38;2;225;228;232m,[39m[0m                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m    label: name [39m[38;2;249;117;131m||[39m[38;2;225;228;232m [39m[38;2;158;203;255m""[39m[38;2;225;228;232m,[39m[0m                                                   [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m          [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given callers results > renders caller symbols with file paths and line numbers 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Callers (3/3)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/files/component.ts[0m                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 createFilesComponent [38;2;76;62;118magent/extensions/i[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m {[39m[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createSymbolsComponent [38;2;76;62;118magent/extensions[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ExtensionAPI,[39m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 createListPicker [38;2;76;62;118magent/extensions/ide/l[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ExtensionContext,[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  KeybindingsManager,[39m[0m                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m} [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-tui"[39m[38;2;225;228;232m;[39m[0m                   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { Key } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-tui"[39m[38;2;225;228;232m;[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m {[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  createListPicker,[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m ListPickerComponent,[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m} [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker"[39m[38;2;225;228;232m;[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { SymbolReferenceActionType } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../symbol-references/typ[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { openEditor } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/editor-utils"[39m[38;2;225;228;232m;[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { FileInfo, FileResult } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./types"[39m[38;2;225;228;232m;[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getMtimeSorter } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./helpers"[39m[38;2;225;228;232m;[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { loadFilePreviewWithShiki } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-preview"[39m[38;2;225;228;232m;[39m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { join } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"node:path"[39m[38;2;225;228;232m;[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mconst[39m[38;2;225;228;232m [39m[38;2;121;184;255mBINARY_EXTENSIONS[39m[38;2;225;228;232m [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;249;117;131mnew[39m[38;2;225;228;232m [39m[38;2;179;146;240mSet[39m[38;2;225;228;232m([[39m[0m                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;106;115;125m// images[39m[0m                                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"png"[39m[38;2;225;228;232m,[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"jpg"[39m[38;2;225;228;232m,[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"jpeg"[39m[38;2;225;228;232m,[39m[0m                                                                [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m          [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given empty results > renders the no items message 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Callers (0/0)[0m                            [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m                           [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit[0m                                                                                      [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given schema results > renders schema fields with consistent padding 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Schema (4/4)[0m                             [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/components/files/component.ts[0m                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰊕 pi [38;2;76;62;118magent/extensions/ide/components/file[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m {[39m[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 tui [38;2;76;62;118magent/extensions/ide/components/fil[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ExtensionAPI,[39m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 theme [38;2;76;62;118magent/extensions/ide/components/f[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ExtensionContext,[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰊕 ctx [38;2;76;62;118magent/extensions/ide/components/fil[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  KeybindingsManager,[39m[0m                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m} [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-tui"[39m[38;2;225;228;232m;[39m[0m                   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { Key } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-tui"[39m[38;2;225;228;232m;[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m {[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  createListPicker,[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m ListPickerComponent,[39m[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m} [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/list-picker"[39m[38;2;225;228;232m;[39m[0m                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { SymbolReferenceActionType } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../symbol-references/typ[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getFileIcon } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-icons"[39m[38;2;225;228;232m;[39m[0m                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { openEditor } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/editor-utils"[39m[38;2;225;228;232m;[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { FileInfo, FileResult } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./types"[39m[38;2;225;228;232m;[39m[0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { getMtimeSorter } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./helpers"[39m[38;2;225;228;232m;[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { loadFilePreviewWithShiki } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../../lib/file-preview"[39m[38;2;225;228;232m;[39m[0m       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { join } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"node:path"[39m[38;2;225;228;232m;[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mconst[39m[38;2;225;228;232m [39m[38;2;121;184;255mBINARY_EXTENSIONS[39m[38;2;225;228;232m [39m[38;2;249;117;131m=[39m[38;2;225;228;232m [39m[38;2;249;117;131mnew[39m[38;2;225;228;232m [39m[38;2;179;146;240mSet[39m[38;2;225;228;232m([[39m[0m                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;106;115;125m// images[39m[0m                                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"png"[39m[38;2;225;228;232m,[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"jpg"[39m[38;2;225;228;232m,[39m[0m                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;158;203;255m"jpeg"[39m[38;2;225;228;232m,[39m[0m                                                                [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m          [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`symbol-references — list row rendering > given types results > renders type references with definitions 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Types (3/3)[0m                              [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m ./agent/extensions/ide/lib/list-picker.ts[0m                                 [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m 󰈚 ListPickerComponent [38;2;76;62;118magent/extensions/id[39m[22m[39m[49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Component } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-tui"[39m[38;2;225;228;232m;[39m[39m[0m                   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰈚 SymbolResult [38;2;76;62;118magent/extensions/ide/compo[39m[38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m {[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m 󰈚 FileResult [38;2;76;62;118magent/extensions/ide/compone[39m[38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  ExtensionAPI,[39m[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  KeybindingsManager,[39m[0m                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m} [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { Theme } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-coding-agent"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { Key } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"@mariozechner/pi-tui"[39m[38;2;225;228;232m;[39m[0m                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createKeyboardHandler, buildHelpFromBindings } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../keyboar[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { KeyBinding } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"../keyboard"[39m[38;2;225;228;232m;[39m[0m                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { truncateAnsi, ensureWidth, pad } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./text-utils"[39m[38;2;225;228;232m;[39m[0m           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { applyFocusedStyle } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./style-utils"[39m[38;2;225;228;232m;[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { calculateDimensions } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./split-panel/layout"[39m[38;2;225;228;232m;[39m[0m              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { renderSplitPanel } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./split-panel/border"[39m[38;2;225;228;232m;[39m[0m                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { renderSourceRows } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./split-panel/content"[39m[38;2;225;228;232m;[39m[0m                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m { createStatusNotifier, formatHelpWithStatus } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./ui/status"[39m[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mimport[39m[38;2;225;228;232m [39m[38;2;249;117;131mtype[39m[38;2;225;228;232m { StatusMessageState } [39m[38;2;249;117;131mfrom[39m[38;2;225;228;232m [39m[38;2;158;203;255m"./ui/status"[39m[38;2;225;228;232m;[39m[0m                   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131minterface[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerItem[39m[38;2;225;228;232m {[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mid[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mlabel[39m[38;2;249;117;131m:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mpath[39m[38;2;249;117;131m?:[39m[38;2;225;228;232m [39m[38;2;121;184;255mstring[39m[38;2;225;228;232m;[39m[0m                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mstartLine[39m[38;2;249;117;131m?:[39m[38;2;225;228;232m [39m[38;2;121;184;255mnumber[39m[38;2;225;228;232m;[39m[0m                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m  [39m[38;2;255;171;112mendLine[39m[38;2;249;117;131m?:[39m[38;2;225;228;232m [39m[38;2;121;184;255mnumber[39m[38;2;225;228;232m;[39m[0m                                                      [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;225;228;232m}[39m[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [38;2;249;117;131mexport[39m[38;2;225;228;232m [39m[38;2;249;117;131minterface[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerAction[39m[38;2;225;228;232m<[39m[38;2;179;146;240mT[39m[38;2;225;228;232m [39m[38;2;249;117;131mextends[39m[38;2;225;228;232m [39m[38;2;179;146;240mListPickerItem[39m[38;2;225;228;232m> {[39m[0m            [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert  ctrl+t callers  ctrl+j callees  ctrl+y types  ctrl+k schema[0m          [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
